[package]
name = "hst-cdx"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/hassreden-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
csv = "1"
itertools = "0.10"
lazy_static = "1.4"
parquet = "10"
rocksdb = "0.18"
thiserror = "1"
wayback-rs = "0.4"