[package]
name = "hst-cdx"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/hassreden-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "15", features = ["chrono-tz", "ipc", "simd"] }
chrono = "0.4"
csv = "1"
datafusion = "9.0.0"
itertools = "0.10"
lazy_static = "1.4"
parquet = "15"
rocksdb = { version = "0.18", default-features = false, features = ["snappy", "lz4", "zlib", "bzip2"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wayback-rs = "0.5"
