[package]
name = "hst-memory-lol"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/hassreden-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
