[package]
name = "hst-tw-reports"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/hassreden-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = { git = "https://github.com/apache/avro", features = ["snappy"], rev = "bf6b86d2" }
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
hst-cli = { path = "../hst-cli" }
hst-deactivations = { path = "../hst-deactivations" }
hst-tw-db = { path = "../hst-tw-db" }
hst-tw-profiles = { path = "../hst-tw-profiles" }
log = "0.4"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
