[package]
name = "hst-tw-tools"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/hassreden-tracker"
repository = "https://github.com/travisbrown/hassreden-tracker"
description = "Hassreden-Tracker command-line tools"
keywords = ["twitter"]
license-file = "../../LICENSE"
readme = "../../README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = { version = "0.14", features = ["snappy"] }
chrono = "0.4"
flate2 = "1"
futures = "0.3"
hst-cli = { path = "../hst-cli" }
hst-tw-db = { path = "../hst-tw-db" }
hst-tw-images = { path = "../hst-tw-images" }
hst-tw-profiles = { path = "../hst-tw-profiles" }
itertools = "0.10"
reqwest = { version = "0.11", features = ["gzip", "json"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = "0.11"