[package]
name = "hst-tw-db"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/hassreden-tracker"
repository = "https://github.com/travisbrown/hassreden-tracker"
description = "RocksDB database for storing Twitter user profiles"
keywords = ["twitter"]
license-file = "../../LICENSE"
readme = "../../README.md"
version = "0.2.0"
edition = "2021"

[dependencies]
apache-avro = { version = "0.14", features = ["snappy"] }
chrono = "0.4"
rocksdb = { version = "0.21", default-features = false, features = ["zstd"] }
thiserror = "1"
hst-tw-profiles = { path = "../hst-tw-profiles", version = "0.2.0" }
hst-tw-utils = { path = "../hst-tw-utils", version = "0.2.0" }
