[package]
name = "hst-tw-follow"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/hassreden-tracker"
repository = "https://github.com/travisbrown/hassreden-tracker"
description = "Database for storing Twitter follower information"
keywords = ["twitter"]
license-file = "../../LICENSE"
readme = "../../README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
egg-mode = "0.16"
egg-mode-extras = "0.2"
flate2 = "1"
hst-cli = { path = "../hst-cli" }
hst-deactivations = { path = "../hst-deactivations" }
hst-tw-db = { path = "../hst-tw-db" }
integer-encoding = "3"
rocksdb = { version = "0.19", default-features = false, features = ["zstd"] }
rusqlite = { version = "0.28", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = "0.11"