[package]
name = "hst-tw-images"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/hassreden-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
regex = "1.4"
reqwest = { version = "0.11", features = ["gzip", "json"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
